app_controllers/infrastructure/kubernetes-deployments/services/hashicorp-vault/02_us-west1-a-hashicorp-vault-charles-service.yml

apiVersion: v1
kind: Service
metadata:
  name: hashicorp-vault-charles
spec:
  selector:
    app: hashicorp-vault-charles
  ports:
  - name: http
    targetPort: 8200
    port: 80
