app_controllers/infrastructure/kubernetes-deployments/services/hashicorp-vault/_02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app: vault
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  selector:
    app: vault
