app_controllers/infrastructure/kubernetes-deployments/services/hashicorp-vault/03_us-west1-a-hashicorp-vault-charles-ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hashicorp-vault-charles
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: hashicorp-vault-charles.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: hashicorp-vault-charles
          servicePort: http
